Agrego endpoints de Payment